<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_header">

        <EditTextPreference
            app:key="name"
            app:title="@string/Name_title"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:key="phone"
            app:title="@string/Phone_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="email"
            app:title="@string/Email_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">

        <Preference
            app:key="Logout"
            app:title="@string/Logout_title" />


    </PreferenceCategory>

</PreferenceScreen>