<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:elevation="3dp"
        android:clickable="true"
        android:outlineProvider="bounds"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="5sp"
            android:padding="2dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/Sign"
            android:textSize="38sp"
            android:textColor="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginStart="15sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">
        <ImageView
            android:id="@+id/OrderimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginStart="15sp"
            android:src="@drawable/baseline_shopping_cart_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="15sp"
            android:text="@string/Order"
            android:textSize="38sp"
            android:textColor="@color/black"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_marginStart="15sp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/SettingsimageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginStart="15sp"
                android:src="@drawable/baseline_settings_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="15sp"
                android:text="@string/Settings"
                android:textSize="38sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>